// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Square matches the snapshots 1`] = `
.c0 {
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  background-color: White;
  color: SlateBlue;
  cursor: pointer;
  font-size: 16vh;
  font-weight: bold;
  grid-area: 0;
  justify-self: stretch;
  text-align: center;
  text-transform: uppercase;
}

<span
  className="c0"
  onClick={[Function]}
>
  
</span>
`;

exports[`Square matches the snapshots 2`] = `
.c0 {
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  background-color: White;
  color: Crimson;
  cursor: pointer;
  font-size: 16vh;
  font-weight: bold;
  grid-area: 0;
  justify-self: stretch;
  text-align: center;
  text-transform: uppercase;
}

<span
  className="c0"
  onClick={[Function]}
>
  x
</span>
`;

exports[`Square matches the snapshots 3`] = `
.c0 {
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  background-color: White;
  color: SlateBlue;
  cursor: pointer;
  font-size: 16vh;
  font-weight: bold;
  grid-area: 0;
  justify-self: stretch;
  text-align: center;
  text-transform: uppercase;
}

<span
  className="c0"
  onClick={[Function]}
>
  o
</span>
`;
